tests/snapshots/test_runner__tests__compiler__typecheck__generic_function_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let identity<A>
  : | A => A
  = | x => x

let constant<A>
  : | A => Integer
  = | _ => 2

let map<A B>
  : | A | A => B => B
  = | x f => x.f()

let x: String = "hello".map(identity)
let y: String = "hello".map(| _ => "yo")
let z: String = "hello".map(constant)

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
   ┌─ tests/compiler/typecheck/generic_function_1.kk:15:17
   │
15 │ let z: String = "hello".map(constant)
   │                 ^^^^^^^^^^^^^^^^^^^^^ Type mismatch
   │
   = +---------------+-------------+
     | EXPECTED TYPE | ACTUAL TYPE |
     +---------------+-------------+
     | - String      | + Integer   |
     +---------------+-------------+
